--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <header>
 	<section>
 		<div>
-			<h1>Rest'Oran</h1>
+		
+			<h1><img src="public/img/logoooo.png">Rest'Oran</h1>
 			<h2>Restaurant gatronomique spécialité Algérienne</h2>
 		</div>
-		<img src="public/img/logo.png" alt="">
 		<nav>
 			<a href="index.php">Accueil</a>
 			<a href="index.php">La Carte</a>
