Correction index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <header>
 	<section>
+		<img src="public/img/logoooo.png" alt="Logo du site">
 		<div>
-		
-			<h1><img src="public/img/logoooo.png">Rest'Oran</h1>
+			<h1>Rest'Oran</h1>
 			<h2>Restaurant gatronomique spécialité Algérienne</h2>
 		</div>
 		<nav>
@@ -33,7 +33,7 @@
 </header>
 
 <main>
-	<h1>Bienvenue </h1>
+	<h1>Bienvenue</h1>
 	<img src="public/img/restaurant1.jpg" alt="Image du restaurant" class="thumb">
 	<section id="presentation">
 		<article>
